--- a/assets/css/templatemo-tale-seo-agency.css
+++ b/assets/css/templatemo-tale-seo-agency.css
@@ -440,25 +440,26 @@ Header Style
   min-height: 80px;
   background: transparent;
   display: flex;
+  align-items: center;
 }
 
 .header-area .main-nav .logo {
-  margin-top: 25px;
+  margin-top: -9px;
   flex-basis: 20%;
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
-
-.background-header .main-nav .logo {
-  margin-top: 10px;
+.header-area .main-nav .logo img {
+  width: 180px;
+  height: 150px;
 }
 
 .header-area .main-nav .nav {
   flex-basis: 80%;
   height: 50px;
-  margin-top: 0px;
+  margin-top: -50px;
   margin-right: 0px;
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
@@ -891,17 +892,18 @@ Banner Style
 }
 
 .main-banner::before {
-  content: url(../images/banner-left.png);
-  top: -1px;
-  left: 0;
+  content: url(/images/removed/hero__2_-removebg-preview.png);
+  top: 280px;
+  left: 300px;
   position: absolute;
   width: 194px;
   height: 655px;
   z-index: -1;
+  animation: topdown 3s infinite;
 }
 
 .main-banner h2 {
-  font-size: 50px;
+  font-size: 40px;
   color: var(--second-color);
   text-transform: uppercase;
   font-weight: 700;
@@ -976,12 +978,12 @@ Services Style
 }
 
 .services::before {
-  content: url(/images/removed/hero__2_-removebg-preview.png);
-  top: 120px;
-  left: -350px;
+  content: url(/images/removed/new.png);
+  top: 200px;
+  left: 350px;
   position: absolute;
-  width: 844px;
-  height: 714px;
+  width: 200px;
+  height: 5px;
   z-index: -1;
 }
 
