--- a/assets/css/templatemo-tale-seo-agency.css
+++ b/assets/css/templatemo-tale-seo-agency.css
@@ -1,5 +1,3 @@
-
-
 /* ---------------------------------------------
 Table of contents
 ------------------------------------------------
@@ -909,10 +907,6 @@ Banner Style
   height: 2px;
   background-color: #decdfa;
 }
-.main-banner p {
-  color: black;
-  font-weight: bold;
-}
 .main-banner h4 {
   font-size: 52px;
   color: b#2a2a2a;
@@ -931,14 +925,17 @@ Banner Style
 }
 
 .main-banner p {
-  padding-right: 25%;
-  margin-bottom: 30px;
+  margin-bottom: 25px;
   font-size: 20px;
+  color: black;
+  font-weight: bold;
+  width: 70%;
 }
 
 .main-banner .main-button {
   display: inline-block;
-  margin-right: 180px;
+  margin-top: 25px;
+  /* margin-right: 180px; */
 }
 .main-banner .second-button a {
   font-size: 22px;
@@ -950,6 +947,8 @@ Banner Style
   display: inline-block;
   margin: 0px 10px 0px 10px;
   color: var(--main-color);
+  font-size: 30px;
+  font-weight: bolder;
 }
 
 .main-banner .second-button {
@@ -972,9 +971,9 @@ Services Style
 }
 
 .services::before {
-  content: url(/images/removed/new.png);
+  content: url(../images/contact-left.jpg);
   top: 200px;
-  left: 350px;
+  left: -100px;
   position: absolute;
   width: 200px;
   height: 5px;
@@ -1017,6 +1016,7 @@ Services Style
   margin-bottom: 30px;
   transition: all 0.4s;
   animation: topdown 3s infinite;
+  height: 400px;
 }
 .services .service-item h4 {
   font-size: 20px;
@@ -1788,6 +1788,9 @@ body {
   .main-banner {
     margin-top: 100px;
   }
+  .main-banner p {
+    width: 70%;
+  }
   .header-area .main-nav .nav li:nth-child(4) {
     padding-right: 0px !important;
   }
@@ -1843,7 +1846,8 @@ body {
     text-align: center;
   }
   .main-banner p {
-    padding-right: 0%;
+    width: 100%;
+    text-align: center;
   }
   .main-banner .line-dec {
     margin: 30px auto 20px auto;
@@ -1927,6 +1931,9 @@ body {
 @media (min-width: 1200px) {
   .slideshow-container .mySlides {
     transform: translateX(6%);
+  }
+  .main-banner p {
+    margin: 0;
   }
 }
 @media (min-width: 1450px) {
@@ -2176,7 +2183,7 @@ body {
 
 .about .container .about-content .ab .overlay p {
   color: var(--third-cold);
-  font-size: 20px;
+  font-size: 15px;
   margin-left: 5px;
   margin-right: 5px;
   text-align: center;
