--- a/assets/css/templatemo-tale-seo-agency.css
+++ b/assets/css/templatemo-tale-seo-agency.css
@@ -1346,7 +1346,7 @@ Contact Style
 
 .contact-us-content .more-info h4 a {
   color: #fff;
-  font-size: 16px;
+  font-size: 12px;
   font-weight: 400;
 }
 
@@ -2280,3 +2280,30 @@ body {
   background-color: green;
 }
 /*END order opage */
+.video1 video {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+.video1::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  opacity: 0.5;
+  z-index: 0;
+}
+.video2 video {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%);
+  z-index: 2;
+  width: calc(1280px / 2);
+  height: 780px;
+}
